configurações da esteira, mais testes unitários